; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/usbdrv/extr_usbdrv.c_usbDeviceRead.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/usbdrv/extr_usbdrv.c_usbDeviceRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usbMsgPtr = common dso_local global i64* null, align 8
@usbMsgFlags = common dso_local global i32 0, align 4
@USB_FLG_MSGPTR_IS_ROM = common dso_local global i32 0, align 4
@USB_FLG_USE_USER_RW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64)* @usbDeviceRead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @usbDeviceRead(i64* %0, i64 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %45

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  store i64 %11, i64* %5, align 8
  %12 = load i64*, i64** @usbMsgPtr, align 8
  store i64* %12, i64** %6, align 8
  %13 = load i32, i32* @usbMsgFlags, align 4
  %14 = load i32, i32* @USB_FLG_MSGPTR_IS_ROM, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %31

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %26, %17
  %19 = load i64*, i64** %6, align 8
  %20 = call i64 @USB_READ_FLASH(i64* %19)
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load i64*, i64** %3, align 8
  %23 = getelementptr inbounds i64, i64* %22, i32 1
  store i64* %23, i64** %3, align 8
  store i64 %21, i64* %22, align 8
  %24 = load i64*, i64** %6, align 8
  %25 = getelementptr inbounds i64, i64* %24, i32 1
  store i64* %25, i64** %6, align 8
  br label %26

26:                                               ; preds = %18
  %27 = load i64, i64* %5, align 8
  %28 = add nsw i64 %27, -1
  store i64 %28, i64* %5, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %18, label %30

30:                                               ; preds = %26
  br label %43

31:                                               ; preds = %10
  br label %32

32:                                               ; preds = %38, %31
  %33 = load i64*, i64** %6, align 8
  %34 = getelementptr inbounds i64, i64* %33, i32 1
  store i64* %34, i64** %6, align 8
  %35 = load i64, i64* %33, align 8
  %36 = load i64*, i64** %3, align 8
  %37 = getelementptr inbounds i64, i64* %36, i32 1
  store i64* %37, i64** %3, align 8
  store i64 %35, i64* %36, align 8
  br label %38

38:                                               ; preds = %32
  %39 = load i64, i64* %5, align 8
  %40 = add nsw i64 %39, -1
  store i64 %40, i64* %5, align 8
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %32, label %42

42:                                               ; preds = %38
  br label %43

43:                                               ; preds = %42, %30
  %44 = load i64*, i64** %6, align 8
  store i64* %44, i64** @usbMsgPtr, align 8
  br label %45

45:                                               ; preds = %43, %2
  %46 = load i64, i64* %4, align 8
  ret i64 %46
}

declare dso_local i64 @USB_READ_FLASH(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
